Updated with new statements in 15 May 2021 for 2021 tax declarations

--- a/finance/BullionVault/AdrianBuzatu_BullionVault_2020.ipynb
+++ b/finance/BullionVault/AdrianBuzatu_BullionVault_2020.ipynb
@@ -17,7 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_file_name = \"/Users/abuzatu/Work/data/finance/stocks/BullionVault/BullionVault_PL_NARIAD_10_September_2021_095253.csv\"\n",
+    "input_folder_name = \"/Users/abuzatu/Work/data/finance/stocks/BullionVault\"\n",
+    "# input_file_name = f\"{input_folder_name}/BullionVault_PL_NARIAD_10_September_2021_095253.csv\"\n",
+    "input_file_name = f\"{input_folder_name}/BullionVault_PL_NARIAD_09_May_2022_160117.csv\"\n",
     "input_file_name"
    ]
   },
@@ -201,11 +203,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Custody fees\n",
+    "\n",
+    "Note these were not claimed in 2020, I forgot to claim them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df[\"Action\"] == \"CUSTODY\"][\"Cost (€)\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Wire charges\n",
     "\n",
     "To this I add 20 euros in wire charges for two money withdrawals I have done in 2020. \n",
     "\n",
     "Please see the last page of the file `AdrianBuzatu_BullionVault_Statement_2020.pdf`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Total claim for 2020\n",
+    "\n",
+    "Note that in 2020 I forgot to claim the custody fees of 66.52"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "-248.53 - 20.0"
    ]
   },
   {
