--- a/finance/BullionVault/AdrianBuzatu_BullionVault_2021.ipynb
+++ b/finance/BullionVault/AdrianBuzatu_BullionVault_2021.ipynb
@@ -17,7 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_file_name = \"/Users/abuzatu/Work/data/finance/stocks/BullionVault/BullionVault_PL_NARIAD_10_September_2021_095253.csv\"\n",
+    "input_folder_name = \"/Users/abuzatu/Work/data/finance/stocks/BullionVault\"\n",
+    "# input_file_name = f\"{input_folder_name}/BullionVault_PL_NARIAD_10_September_2021_095253.csv\"\n",
+    "input_file_name = f\"{input_folder_name}/BullionVault_PL_NARIAD_09_May_2022_160117.csv\"\n",
     "input_file_name"
    ]
   },
@@ -52,16 +54,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Keeping only 2021\n",
+    "# Keeping only 2020 and 2021\n",
     "\n",
-    "\n",
-    "There are 799 rows, over time.\n",
-    "\n",
-    "I declared taxes in Germany in 2019, but I did not trade at BullionVault in 2019.\n",
-    "\n",
-    "I now calculate for the tax declaration in Germany of calendar year 2020.\n",
-    "\n",
-    "So let's keep only the subset of actions in 2020. There are 6 of them."
+    "See the profit loss in both years. And subtract the profit/loss in 2020 (see the other Jupyter Notebook only for 2020). The reason is that trades can start in one year and end in another year. So it is not enough to look only at trades that started in 2021. "
    ]
   },
   {
@@ -70,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[df[\"Date (UTC)\"].str.contains(\"2021\")]\n",
+    "df = df[(df[\"Date (UTC)\"].str.contains(\"2020\")) | (df[\"Date (UTC)\"].str.contains(\"2021\"))]\n",
     "df"
    ]
   },
@@ -79,15 +74,6 @@
    "metadata": {},
    "source": [
     "Change format of date so that we can short chronologically"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(df)"
    ]
   },
   {
@@ -210,9 +196,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Custody fees\n",
+    "\n",
+    "Note Custody fees were not claimed as lossed in 2020, so claiming now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df[\"Action\"] == \"CUSTODY\"][\"Cost (€)\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Specific for 2021\n",
+    "\n",
+    "Making difference of profit/loss of 2020+2021 to 2020 alone:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Realised gain\n",
+    "129.34 - (-248.53)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# custody fees\n",
+    "99.79 - 66.52"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Wire charges\n",
     "\n",
-    "To this I add xx euros in wire charges for two money withdrawals I have done in 2021. \n",
+    "To this I add 10 euros in wire charges for one money withdrawals I have done in 2021. \n",
     "\n",
     "Please see the last page of the file `AdrianBuzatu_BullionVault_Statement_2021.pdf`."
    ]
@@ -221,9 +254,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Total claim for 2021\n",
+    "\n",
+    "Note that in 2020 I forgot to claim the custody fee of 66.52. Not sure if it is allowed to claim now. Without it, my total claim is a profit of 334.6. If I can claim those fees from 2020, the total profit would be "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if I do not claim also the custody fees of 2020 that I forgot to claim\n",
+    "377.87 - 33.27 - 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if I claim also the custody fees of 2020 that I forgot to claim\n",
+    "377.87 - 33.27 - 10 - 66.52"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Conclusion\n",
     "\n",
-    "In conclusion, I would like to claim xxx euro as a loss from trading physical bullion (silver and gold) at BullionVault.com in calendar year 2021."
+    "In conclusion, I would like to claim 334.6 euro as a profit from trading physical bullion (silver and gold) at BullionVault.com in calendar year 2021."
    ]
   }
  ],
