Changes in Revolut code in fall 2021, but never saved until now

--- a/finance/Revolut/AdrianBuzatu_Revolut_old_format.ipynb
+++ b/finance/Revolut/AdrianBuzatu_Revolut_old_format.ipynb
@@ -54,7 +54,7 @@
     "df_deposit = pd.concat(\n",
     "    [\n",
     "        get_df_deposit(\"2020\"),\n",
-    "        get_df_deposit(\"2021\"),\n",
+    "        # get_df_deposit(\"2021\"),\n",
     "    ],\n",
     "    axis = 0,\n",
     ")\n",
@@ -96,7 +96,7 @@
     "df_trade = pd.concat(\n",
     "    [\n",
     "        get_df_trade(\"2020\"),\n",
-    "        get_df_trade(\"2021\"),\n",
+    "        # get_df_trade(\"2021\"),\n",
     "    ],\n",
     "    axis = 0,\n",
     ")\n",
@@ -376,6 +376,15 @@
    "outputs": [],
    "source": [
     "df_deposit.deposit.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert False"
    ]
   },
   {
