--- a/finance/Revolut/AdrianBuzatu_Revolut.ipynb
+++ b/finance/Revolut/AdrianBuzatu_Revolut.ipynb
@@ -39,6 +39,110 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_file_name = f\"/Users/abuzatu/Work/data/finance/stocks/Revolut/Revolut_start_2020_10.csv\"\n",
+    "input_file_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0 = pd.read_csv(input_file_name)\n",
+    "df0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(df0.Date.values[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0[\"Date\"] = pd.to_datetime(df0[\"Date\"])\n",
+    "df0 = df0[df0.Date<\"2021-01-01 00:00:00\"]\n",
+    "df0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0.Ticker.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0.Type.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0[df0.Type == \"CASH TOP-UP\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0[df0.Type == \"CUSTODY_FEE\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0[df0.Type == \"DIVIDEND\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0[df0.Ticker == \"TSLA\"][0:50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0[\"counter_new\"] = 1\n",
+    "df0"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,7 +158,7 @@
     "df_deposit = pd.concat(\n",
     "    [\n",
     "        get_df_deposit(\"2020\"),\n",
-    "        get_df_deposit(\"2021\"),\n",
+    "        # get_df_deposit(\"2021\"),\n",
     "    ],\n",
     "    axis = 0,\n",
     ")\n",
@@ -77,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_deposit.sum()-23061.07-11798.87"
+    "df_deposit.sum()"
    ]
   },
   {
@@ -96,7 +200,7 @@
     "df_trade = pd.concat(\n",
     "    [\n",
     "        get_df_trade(\"2020\"),\n",
-    "        get_df_trade(\"2021\"),\n",
+    "        # get_df_trade(\"2021\"),\n",
     "    ],\n",
     "    axis = 0,\n",
     ")\n",
@@ -112,9 +216,95 @@
    "source": [
     "df = df_trade.copy()\n",
     "# df = df[df.ticker == \"SPCE\"]\n",
-    "df = df[df.date < \"2021-11\"]\n",
+    "# df = df[df.date < \"2021-11\"]\n",
+    "df = df[df.date < \"2021-01\"]\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df02 = df0[df0.Type == \"BUY\"].groupby(\"Ticker\").agg(\"sum\")[[\"Quantity\", \"Total Amount\", \"counter_new\"]].reset_index()\n",
+    "df02"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(df02)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df12 = df[df.action == \"B\"].groupby(\"ticker\").agg(\"sum\")[[\"stock\", \"cash\", \"counter\"]].reset_index()\n",
+    "df12[\"cash\"] = - df12[\"cash\"]\n",
+    "df12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(df12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df12.merge(df02, left_on = \"ticker\", right_on = \"Ticker\", how = \"outer\")\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2[\"diff_quantity\"] = df2[\"Quantity\"] - df2[\"stock\"]\n",
+    "df2[\"diff_amount\"] = df2[\"Total Amount\"] - df2[\"cash\"]\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2[abs(df2.diff_quantity)>0.001]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2[abs(df2.diff_amount)>5.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
